# zvec-okf-search

./: .env.example  .gitignore  LICENSE  ONBOARDING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
benchmarks/: README.md  queries.json
benchmarks/corpus/: index.md
benchmarks/corpus/topics/: documents.md  infrastructure.md  logistics.md  retail.md  security.md  suppliers.md  telephony.md  travel.md
deploy/: install.sh  okf-zvec-search.service
examples/okf/: index.md
examples/okf/topics/: example-service.md
scripts/: load_test.py  search.ps1  sync.ps1
src/: okf_zvec.py
src/okf_zvec_search/: __init__.py  cli.py  config.py  indexing.py  models.py  search.py  state.py  text.py  web.py
tests/: test_http.py  test_operations.py  test_packaging.py  test_search_quality.py  test_sync.py  test_text_processing.py  test_zvec_integration.py
